--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ k.p.toString(16)+", data=0x"+p.toString(16)))}return m};t.L=function(a){this.j=a
                     else
                     if (filenames[i].indexOf('.mem') > 0)
                     {
-                      var memoryInitializer = 'Time Sofa.html.mem';
+                      var memoryInitializer = 'time_sofa.html.mem';
                       if (typeof Module['locateFile'] === 'function') {
                         memoryInitializer = Module['locateFile'](memoryInitializer);
                       } else if (Module['memoryInitializerPrefixURL']) {
@@ -175,7 +175,7 @@ k.p.toString(16)+", data=0x"+p.toString(16)))}return m};t.L=function(a){this.j=a
           			break;
           	}
           };
-          xml.open('GET', "Time Sofa.bin", true);
+          xml.open('GET', "time_sofa.bin", true);
           xml.send(null);
 </script>
 
